Fix mobile overflow in career footprint map

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -2823,6 +2823,7 @@
   }
 
   .bg-career-footprint .cfp-map-wrap {
+    aspect-ratio: auto;
     min-height: 260px;
   }
 
